# drf_docker_template

./: .editorconfig  .gitignore  .gitlab-ci.yml  Readme.md  deploy.sh  local.yml  production.yml  pyproject.toml  requirements.txt
.envs/.local/: .django  .postgres
apps/: urls.py
apps/auth/: forms.py  serializers.py  urls.py  views.py
apps/choices/: admin.py  enums.py  models.py
apps/choices/api/: serializers.py  urls.py  views.py
apps/choices/migrations/: 0001_initial.py
apps/company/: models.py
apps/company/migrations/: 0001_initial.py  (+1 more)
apps/customers/: admin.py  models.py
apps/drivers/: admin.py  consumers.py  models.py  routing.py
apps/finances/: admin.py  models.py  tasks.py
apps/notification/: models.py
apps/orders/: admin.py  models.py
apps/roles/: admin.py  models.py
apps/settings/: admin.py  models.py
apps/users/: admin.py  enums.py  managers.py  models.py  tasks.py
configs/: models.py
configs/migrations/: 0002_historicalbackendemail.py  0003_historicalbackendemail_ip_address.py  0004_remove_historicalbackendemail_ip_address.py
project/: asgi.py  celery.py  settings.py  settings_local.py  urls.py  wsgi.py
project/deploy/: celery-beat.conf  celery-flower.conf  celery-worker.conf  gunicorn_config.py  nginx.conf  run-celery-beat.sh  run-celery-flower.sh  run-celery-worker.sh  start_gunicorn.sh  supervisor.conf  toocan.conf
snippets/: auth.py  filters.py  response.py
snippets/models/: abstracts.py  creating_limit.py  mixins.py
snippets/utils/: datetime.py  mail.py  passwords.py
templates/admin/: login.html
(+76 files in other folders)
